apps/test/deployment.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: longhorn-volv-pvc3
spec:
  accessModes:
  - ReadWriteMany
  # storageClassName: longhorn
  resources:
    requests:
      storage: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    component: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
    spec:
      containers:
      - name: nginx
        image: nginxdemos/hello
        resources:
          limits:
            cpu: "0.5"
            memory: "256Mi"
          requests:
            cpu: "0.25"
            memory: "128Mi"
        volumeMounts:
        - name: volv
          mountPath: /data
        env:
        - name: USERNAME
          valueFrom:
            secretKeyRef:
              name: test-secret
              key: username
        - name: PASSWORD
          valueFrom:
            secretKeyRef:
              name: test-secret
              key: password
      volumes:
      - name: volv
        persistentVolumeClaim:
          claimName: longhorn-volv-pvc3
---
apiVersion: secrets.hashicorp.com/v1beta1
kind: VaultConnection
metadata:
  name: vault-connection
spec:
  address: http://vault.vault.svc.cluster.local:8200
---
apiVersion: secrets.hashicorp.com/v1beta1
kind: VaultAuth
metadata:
  name: vault-auth
spec:
  vaultConnectionRef: vault-connection
  method: kubernetes
  mount: k8s-test-path
  kubernetes:
    role: k8s-test-role
    serviceAccount: default
---
apiVersion: secrets.hashicorp.com/v1beta1
kind: VaultStaticSecret
metadata:
  name: test-vault-static-secret
spec:
  vaultAuthRef: vault-auth
  mount: homek8s
  path: test1
  type: kv-v2
  refreshAfter: 60s
  destination:
    create: true
    name: test-secret # secret name
