apps/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-argo-nginx-ingress
  namespace: test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx-external
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-nginx-deployment-service
                port:
                  name: http
      host: test-ingress-nginx.tak848.me
  tls:
    - hosts:
        - test-ingress-nginx.tak848.me
      secretName: test-ingress-nginx-cert-secret
